--- a/web/html-css-js-admin/assets/styles/pages/authorization.sass
+++ b/web/html-css-js-admin/assets/styles/pages/authorization.sass
@@ -1,15 +1,3 @@
 @import "style"
 
-@import "../components/markbox"
-
-@import "../components/index-cap"
-@import "../components/reviews"
-@import "../components/reviews-modal"
-@import "../components/faq-questions"
-@import "../components/questions"
-@import "../components/orders"
-@import "../components/order-form"
-@import "../components/products"
-@import "../components/assortment"
-@import "../components/materials-fittings"
-@import "../components/packaging"
+@import "../components/auth-form"
