--- a/web/html-css-js-admin/assets/views/_variables.pug
+++ b/web/html-css-js-admin/assets/views/_variables.pug
@@ -19,7 +19,8 @@
 
   const pages = [
     { view: 'authorization', name: 'Авторизация', style: 'authorization', priority: 1, link: '/' },
-    //{ view: '404', name: 'Ошибка 404', style: 'error404', priority: false, link: '/404.html' },
+    { view: 'products', name: 'Товары', style: 'products', priority: 2, link: '/products' },
+    { view: '404', name: 'Ошибка 404', style: 'error404', priority: false, link: '/404.html' },
   ]
 
   function getPage(view) {
