--- a/web/html-css-js-admin/assets/views/components/error404/error404.pug
+++ b/web/html-css-js-admin/assets/views/components/error404/error404.pug
@@ -1,6 +1,8 @@
 .error404
-  .error404__cont.cont
-    h1.error404__caption.caption Страница не найдена
-    p.error404__text.text-big Возможно, её удалили или ещё не создали
-    .error404__btn-box
-      a.error404__link.button-orange.text(href=getPage('index').link) На главную
+  .error404__content
+    h1.error404__title 404
+    p.error404__text Страница не найдена
+    if hideHeader
+      a.btn.btn-primary(href="/") Вернуться на главную
+    else
+      a.btn.btn-primary(href="/products") Вернуться к товарам
