--- a/web/html-css-js-admin/assets/views/pages/products.pug
+++ b/web/html-css-js-admin/assets/views/pages/products.pug
@@ -10,49 +10,4 @@ block head
   +description('')
 
 block body
-  .products-container
-    .products-header
-      h1.page-title= title
-      a.btn.btn-primary(href="/admin/products/create") 
-        i.icon-plus
-        span Добавить товар
-    
-    .products-filters
-      form.filters-form(action="/admin/products" method="GET")
-        .filter-group
-          input.form-control(type="text" name="search" placeholder="Поиск по названию..." value=search)
-        .filter-group
-          select.form-control(name="category")
-            option(value="" selected=!category) Все категории
-            each cat in categories
-              option(value=cat.id selected=cat.id === category)= cat.name
-        .filter-group
-          select.form-control(name="sort")
-            option(value="date-desc" selected=sort === 'date-desc') Сначала новые
-            option(value="date-asc" selected=sort === 'date-asc') Сначала старые
-            option(value="price-asc" selected=sort === 'price-asc') Сначала дешевле
-            option(value="price-desc" selected=sort === 'price-desc') Сначала дороже
-        button.btn.btn-secondary(type="submit") Применить
-    
-    if error
-      .alert.alert-danger= error
-    
-    .products-grid
-      if products && products.length > 0
-        each product in products
-          .product-card
-            .product-image
-              img(src=product.image || '/static/images/no-image.png' alt=product.name)
-            .product-info
-              h3.product-name= product.name
-              p.product-price #{product.price} ₽
-              .product-category= product.category || 'Без категории'
-            .product-actions
-              form.action-form(style="display: inline-block" action=`/admin/products/${product.id}/edit` method="GET")
-                button.btn.btn-edit(type="submit")
-                  i.icon-edit
-              form.action-form(style="display: inline-block" action=`/admin/products/${product.id}/delete` method="POST" onsubmit="return confirm('Вы уверены, что хотите удалить этот товар?')")
-                button.btn.btn-delete(type="submit")
-                  i.icon-trash
-      else
-        .no-items Нет товаров
+  include ../components/products/products
