--- a/web/html-css-js-admin/assets/views/_variables.pug
+++ b/web/html-css-js-admin/assets/views/_variables.pug
@@ -19,7 +19,7 @@
 
   const pages = [
     { view: 'auth', name: 'Авторизация', style: 'auth', priority: 1, link: '/' },
-    { view: 'products', name: 'Товары', style: 'products', priority: 2, link: '/products' },
+    { view: 'products-index', name: 'Товары', style: 'products-index', priority: 2, link: '/products-index' },
     { view: '404', name: 'Ошибка 404', style: 'error404', priority: false, link: '/404.html' },
   ]
 
