--- a/web/html-css-js-admin/assets/views/components/_layout/header.pug
+++ b/web/html-css-js-admin/assets/views/components/_layout/header.pug
@@ -1,2 +1,6 @@
-header.header(data-element="header")
+header.header
   .header__cont.cont
+    nav.header__nav
+      a.header__nav-link(href="/admin/products" class=view === 'products-index' ? 'active' : '') 
+        i.icon-box
+        span Товары
