--- a/web/html-css-js-admin/assets/styles/_variables.sass
+++ b/web/html-css-js-admin/assets/styles/_variables.sass
@@ -5,11 +5,14 @@ $orange: #EA7557
 $orange_hover: #FD9479
 $orange_active: #E2542F
 $gray-light: #F5F5F5
+$gray-lighter: #E1E1E1
+$gray-dark: #D9D9D9
 $gray:  #E1E1E1
 $red: #EB5757
 $peach: #FFF1EE
 $green: #27AE60
 $green-dark: #219653
+$blue: #2D9CFF
 
 // bp 1240, 950, 700, 520
 @mixin media($bp-size)
