--- a/web/html-css-js-admin/assets/styles/components/auth-form.sass
+++ b/web/html-css-js-admin/assets/styles/components/auth-form.sass
@@ -2,16 +2,18 @@
   display: flex
   align-items: center
   justify-content: center
-  min-height: 100vh
+  margin-top: 90px
   padding: 15px
+  @include media(950)
+    margin-top: 50px
 
   &__cont
     width: 100%
     max-width: 500px
 
   &__box
-    background: #FFFFFF
-    box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.03)
+    background: $white
+    box-shadow: 0px 0px 32px rgba($black, 0.03)
     border-radius: 12px
     padding: 30px
 
@@ -23,8 +25,8 @@
     width: 100%
 
   &__alert
-    background: #FFF5F5
-    border: 1px solid #FF8989
+    background: $peach
+    border: 1px solid $red
     border-radius: 8px
     padding: 15px
     margin-bottom: 20px
@@ -42,19 +44,21 @@
   &__input
     width: 100%
     height: 48px
-    background: #FFFFFF
-    border: 1px solid #E0E0E0
+    background: $white
+    border: 1px solid $gray
     border-radius: 8px
     padding: 0 15px
     transition: all 0.3s ease
 
     &:focus
-      border-color: #FF5C00
+      border-color: $orange
       outline: none
 
     &::placeholder
-      color: #BDBDBD
+      color: $gray
 
   &__button
     width: 100%
+    height: 48px
+    border-radius: 10px
     margin-top: 30px
