--- a/web/html-css-js-admin/assets/views/pages/auth.pug
+++ b/web/html-css-js-admin/assets/views/pages/auth.pug
@@ -3,6 +3,8 @@ extends ../components/_layout/layout
 block variables
   - const title = 'Авторизация'
   - const bodyClass = 'page-auth'
+  - const hideHeader = true
+  - const hideWrapper = true
 
 block head
   +title(title)
