--- a/web/frontend-admin/assets/styles/components/auth-form.sass
+++ b/web/frontend-admin/assets/styles/components/auth-form.sass
@@ -49,13 +49,33 @@
     border-radius: 8px
     padding: 0 15px
     transition: all 0.3s ease
+    font-size: 18px
+    
+    // Placeholder styles
+    &[placeholder]
+      font-size: 18px
+    
+    &::-webkit-input-placeholder
+      font-size: 18px 
+      color: $gray 
+    
+    &:-moz-placeholder
+      font-size: 18px 
+      color: $gray 
+      opacity: 1
+    
+    &::-moz-placeholder
+      font-size: 18px 
+      color: $gray 
+      opacity: 1
+    
+    &:-ms-input-placeholder
+      font-size: 18px 
+      color: $gray 
 
     &:focus
       border-color: $orange
       outline: none
-
-    &::placeholder
-      color: $gray
 
   &__button
     width: 100%
