--- a/internal/delivery/http/admin/templates/layout/base.html
+++ b/internal/delivery/http/admin/templates/layout/base.html
@@ -15,6 +15,10 @@
                     <i class="icon-box"></i>
                     <span>Товары</span>
                 </a>
+                <a class="header__nav-link" href="/admin/login">
+                    <i class="icon-box"></i>
+                    <span>Выход</span>
+                </a>
             </nav>
         </div>
     </header>
