--- a/web/frontend-admin/assets/styles/components/_error404.sass
+++ b/web/frontend-admin/assets/styles/components/_error404.sass
@@ -6,23 +6,23 @@
   padding: 2rem
   background-color: $gray-light
 
-  &__content
-    text-align: center
-    max-width: 400px
+.error404__content
+  text-align: center
+  max-width: 400px
 
-  &__title
-    font-size: 8rem
-    font-weight: 700
-    color: $orange
-    line-height: 1
-    margin-bottom: 1rem
-    text-shadow: 2px 2px 4px rgba($black, 0.1)
+.error404__title
+  font-size: 8rem
+  font-weight: 700
+  color: $orange
+  line-height: 1
+  margin-bottom: 1rem
+  text-shadow: 2px 2px 4px rgba($black, 0.1)
 
-  &__text
-    font-size: 1.5rem
-    color: $dark
-    margin-bottom: 2rem
+.error404__text
+  font-size: 1.5rem
+  color: $dark
+  margin-bottom: 2rem
 
-  .btn
-    padding: 0.75rem 2rem
-    font-size: 1.1rem
+.error404 .btn
+  padding: 0.75rem 2rem
+  font-size: 1.1rem
