--- a/web/frontend-admin/assets/styles/components/footer.sass
+++ b/web/frontend-admin/assets/styles/components/footer.sass
@@ -32,9 +32,10 @@ a.footer__logo
   @include hover
     transition-property: opacity
     transition-duration: .2s
-  &:hover
-    @include hover
-      opacity: 0.8
+
+a.footer__logo:hover
+  @include hover
+    opacity: 0.8
 
 .footer__policy-link
   position: relative
@@ -44,17 +45,16 @@ a.footer__logo
   @include media(950)
     margin-bottom: 3px
     padding: 12px 0
-  &::before
-    @include media(1240)
-      position: absolute
-      content: ''
-      left: 0
-      right: 0
-      bottom: 39px
-      height: 1px
-      background-color: $dark
-    @include media(950)
-      bottom: 15px
+
+.footer__policy-link::before
+  @include media(1240)
+    position: absolute
+    content: ''
+    left: 0
+    top: 0
+    width: 100%
+    height: 1px
+    background-color: $gray-dark
 
 .footer__copyright
   display: block
