--- a/web/frontend-admin/assets/views/components/auth/auth.pug
+++ b/web/frontend-admin/assets/views/components/auth/auth.pug
@@ -9,10 +9,10 @@
       
       .auth__group
         label.auth__label.text-big(for="username") Имя пользователя
-        input#username.auth__input(type="text" placeholder="логин" name="username" required)
+        input.auth__input(type="text" placeholder="логин" name="username" required)
       
       .auth__group
         label.auth__label.text-big(for="password") Пароль
-        input#password.auth__input(type="password" placeholder="пароль" name="password" required)
+        input.auth__input(type="password" placeholder="пароль" name="password" required)
       
       button.auth__button.button-orange.text(type="submit") Войти
