--- a/web/frontend-admin/assets/views/components/auth/auth.pug
+++ b/web/frontend-admin/assets/views/components/auth/auth.pug
@@ -8,11 +8,11 @@
         .auth__alert.text-big= error
       
       .auth__group
-        label.auth__label.text-big(for="username") Имя пользователя
+        label.auth__label.text-big Имя пользователя
         input.auth__input(type="text" placeholder="логин" name="username" required)
       
       .auth__group
-        label.auth__label.text-big(for="password") Пароль
+        label.auth__label.text-big Пароль
         input.auth__input(type="password" placeholder="пароль" name="password" required)
       
       button.auth__button.button-orange.text(type="submit") Войти
