--- a/web/frontend-admin/assets/styles/_variables.sass
+++ b/web/frontend-admin/assets/styles/_variables.sass
@@ -6,7 +6,7 @@ $orange_hover: #FD9479
 $orange_active: #E2542F
 $gray-light: #F5F5F5
 $gray-lighter: #E1E1E1
-$gray-dark: #D9D9D9
+$gray-dark: #ddd0d0
 $gray:  #E1E1E1
 $red: #EB5757
 $peach: #FFF1EE
