--- a/web/frontend-admin/assets/styles/components/_header.sass
+++ b/web/frontend-admin/assets/styles/components/_header.sass
@@ -25,6 +25,8 @@
   display: flex
   align-items: center
   gap: 10px
+  width: 100%
+  justify-content: space-between
 
 .header__nav-link
   display: inline-flex
@@ -33,8 +35,11 @@
   padding: 8px 16px
   border-radius: 6px
   color: $dark
+  background: $gray-dark
   font-size: 14px
   transition: all 0.2s ease
+  color: $dark
+    
 
 .header__nav-link i
   font-size: 18px
