--- a/internal/templates/admin-templates/templates/layout/base.html
+++ b/internal/templates/admin-templates/templates/layout/base.html
@@ -15,7 +15,7 @@
                     <i class="icon-box"></i>
                     <span>Товары</span>
                 </a>
-                <a class="header__nav-link" href="/admin/login">
+                <a class="header__nav-link" href="/admin/logout">
                     <i class="icon-box"></i>
                     <span>Выход</span>
                 </a>
