--- a/internal/templates/admin-templates/templates/layout/base.html
+++ b/internal/templates/admin-templates/templates/layout/base.html
@@ -28,6 +28,6 @@
         {{block "content" .}}{{end}}
     </main>
 
-    <script src="{{staticWithHash (printf "/static/js/script.js" )}}"></script>
+    <script src="{{staticWithHash  "/static/js/script.js" }}"></script>
 </body>
 </html>
