--- a/web/frontend-admin/assets/styles/tools/framework.sass
+++ b/web/frontend-admin/assets/styles/tools/framework.sass
@@ -75,3 +75,11 @@
 
 .text-error_hide
   display: none
+
+.alert
+  background: $red
+  border-radius: 12px
+  display: flex
+  justify-content: center
+  margin-bottom: 12px
+  padding: 9px 0
