--- a/web/frontend-admin/assets/styles/tools/framework.sass
+++ b/web/frontend-admin/assets/styles/tools/framework.sass
@@ -4,7 +4,7 @@
   flex: 1 0 auto
   margin-top: 24px
   @include media(950)
-    margin-top: 24px
+    margin-top: 9px
 
 .cont
   margin: 0 auto
@@ -56,6 +56,9 @@
 .text
   font-size: 16px
   line-height: 22px
+  @include media(1240)
+    font-size: 14px
+    line-height: 18px
 
 .text-small
   font-size: 14px
