--- a/web/frontend-client/assets/views/_variables.pug
+++ b/web/frontend-client/assets/views/_variables.pug
@@ -2,9 +2,9 @@
   const pathStatics = '/statics'
   const pathImage = `${pathStatics}/images`
 
-  const phone = { link: 'tel:+79091443776', mask: '+79091443776' }
-  const mail = { link: 'mailto:zyazin.nikita@yandex.ru', mask: 'zyazin.nikita@yandex.ru' }
-  const address = 'п. Вахруши, ул. Рабочая, д. 30'
+  const phone = { link: 'tel:+79229802015', mask: '+79229802015' }
+  const mail = { link: 'mailto:chiedocover@gmail.com', mask: 'chiedocover@gmail.com' }
+  const address = 'г. Киров, ул. Орловская, 4Г'
 
   const menuList = [
     {text: 'Модели', link: '#products'},
