--- a/internal/templates/admin-templates/templates/pages/product-edit.html
+++ b/internal/templates/admin-templates/templates/pages/product-edit.html
@@ -12,7 +12,7 @@
         <div class="alert alert-danger">{{.Error}}</div>
     {{end}}
     <div class="product-edit__form">
-        <form action="/admin/products/{{.Product.ID}}/edit" method="POST">
+        <form action="/admin/products/{{.Product.ID}}/edit" method="POST" enctype="multipart/form-data">
             <input type="hidden" name="original_price" value="{{.Product.Price}}">
             <input type="hidden" name="original_name" value="{{.Product.Name}}">
             <input type="hidden" name="original_description" value="{{.Product.Description}}">
@@ -33,8 +33,8 @@
                 <input id="image" class="product-edit__input" type="file" name="image">
                 <picture class="product-edit__picture">
                     {{if .Product.ImageURL.Valid}}
-                        <source srcset="{{staticWithHash (printf "/static/images/products/%s" .Product.ImageURL.String)}}" media="(max-width: 1240px)" type="image/">
-                        <img src="{{staticWithHash (printf "/static/images/products/%s" .Product.ImageURL.String)}}" alt="Изображение товара">
+                        <source srcset="{{.Product.ImageURL.String}}" media="(max-width: 1240px)" type="image/">
+                        <img src="{{.Product.ImageURL.String}}" alt="Изображение товара">
                     {{end}}
                 </picture>
             </div>
