--- a/web/frontend-admin/assets/styles/_variables.sass
+++ b/web/frontend-admin/assets/styles/_variables.sass
@@ -9,6 +9,7 @@ $gray-lighter: #E1E1E1
 $gray-dark: #ddd0d0
 $gray:  #E1E1E1
 $red: #EB5757
+$red_hover: #FD9479
 $peach: #FFF1EE
 $green: #27AE60
 $green-dark: #219653
