--- a/web/frontend-admin/assets/styles/components/products-index.sass
+++ b/web/frontend-admin/assets/styles/components/products-index.sass
@@ -92,6 +92,16 @@
       @include media(1240)
         width: 10px
 
+.products-index__actions
+  display: flex
+  gap: 8px
+
+.products-index__btn-delete
+  background-color: $red
+  color: $white
+  &:hover
+    background-color: $red_hover
+
 td
   color: $dark
 
