--- a/web/frontend-admin/assets/views/components/products/products-index.pug
+++ b/web/frontend-admin/assets/views/components/products/products-index.pug
@@ -38,5 +38,9 @@
               .products-index__actions  
                 a.btn.products-index__btn-edit(href=`#`)
                   span.text Редактировать
-                a.btn.products-index__btn-delete(href=`#`)
-                  i.products-index__btn-delete-icon
+                form.products-index__delete-form(
+                  method="POST"
+                  action=`#`                  
+                )
+                  button.btn.products-index__btn-delete(type="submit" onclick="return confirm('Вы уверены, что хотите удалить этот товар?')")
+                    i.products-index__btn-delete-icon
