--- a/internal/templates/admin-templates/templates/pages/products-index.html
+++ b/internal/templates/admin-templates/templates/pages/products-index.html
@@ -33,6 +33,11 @@
                         <a class="btn products-index__btn-edit" href="/admin/products/{{$product.ID}}/edit">
                             <span>Редактировать</span>
                         </a>
+                        <form class="products-index__delete-form" method="POST" action="/admin/products/{{$product.ID}}/delete">
+                            <button class="btn products-index__btn-delete" type="submit" onclick="return confirm('Вы уверены, что хотите удалить этот товар?')">
+                                <i class="products-index__btn-delete-icon"></i>
+                            </button>
+                        </form>
                     </td>
                 </tr>
                 {{end}}
