--- a/internal/templates/admin-templates/templates/pages/products-index.html
+++ b/internal/templates/admin-templates/templates/pages/products-index.html
@@ -30,15 +30,17 @@
                     <td>{{$product.Name}}</td>
                     <td>{{$product.Price}} ₽</td>
                     <td>
-                        <a class="btn products-index__btn-edit" href="/admin/products/{{$product.ID}}/edit">
-                            <span>Редактировать</span>
-                        </a>
-                        <form class="products-index__delete-form" method="POST" action="/admin/products/{{$product.ID}}/delete">
-                            <input type="hidden" name="image_url" value="{{$product.ImageURL.String}}">
-                            <button class="btn products-index__btn-delete" type="submit" onclick="return confirm('Вы уверены, что хотите удалить этот товар?')">
-                                <i class="products-index__btn-delete-icon"></i>
-                            </button>
-                        </form>
+                        <div class="products-index__actions">
+                            <a class="btn products-index__btn-edit" href="/admin/products/{{$product.ID}}/edit">
+                                <span>Редактировать</span>
+                            </a>
+                            <form class="products-index__delete-form" method="POST" action="/admin/products/{{$product.ID}}/delete">
+                                <input type="hidden" name="image_url" value="{{$product.ImageURL.String}}">
+                                <button class="btn products-index__btn-delete" type="submit" onclick="return confirm('Вы уверены, что хотите удалить этот товар?')">
+                                    <i class="products-index__btn-delete-icon"></i>
+                                </button>
+                            </form>
+                        </div>
                     </td>
                 </tr>
                 {{end}}
