--- a/internal/templates/admin-templates/templates/pages/products-index.html
+++ b/internal/templates/admin-templates/templates/pages/products-index.html
@@ -36,7 +36,7 @@
                             </a>
                             <form class="products-index__delete-form" method="POST" action="/admin/products/{{$product.ID}}/delete">
                                 <input type="hidden" name="image_url" value="{{$product.ImageURL.String}}">
-                                <button class="btn products-index__btn-delete" type="submit" onclick="return confirm('Вы уверены, что хотите удалить этот товар?')">
+                                <button class="btn products-index__btn-delete" type="submit">
                                     <i class="products-index__btn-delete-icon"></i>
                                 </button>
                             </form>
