--- a/web/frontend-admin/assets/views/pages/product-edit.pug
+++ b/web/frontend-admin/assets/views/pages/product-edit.pug
@@ -8,4 +8,5 @@ block head
   +description('')
 
 block body
-  include ../components/products/product-edit
+  include ../components/products/product-form
+  +product-form('edit', error)
