--- a/web/frontend-admin/assets/views/pages/product-edit.pug
+++ b/web/frontend-admin/assets/views/pages/product-edit.pug
@@ -9,4 +9,5 @@ block head
 
 block body
   include ../components/products/product-form
-  +product-form('edit', error)
+  include ../components/products/product-header
+  +product-form()
