--- a/internal/templates/admin-templates/templates/pages/product-edit.html
+++ b/internal/templates/admin-templates/templates/pages/product-edit.html
@@ -8,39 +8,6 @@
     {{if .Error}}
         <div class="alert alert-danger">{{.Error}}</div>
     {{end}}
-    <div class="product-edit__form">
-        <form action="/admin/products/{{.Product.ID}}/edit" method="POST" enctype="multipart/form-data">
-            <input type="hidden" name="original_price" value="{{.Product.Price}}">
-            <input type="hidden" name="original_name" value="{{.Product.Name}}">
-            <input type="hidden" name="original_description" value="{{.Product.Description}}">
-            <div class="product-edit__form-group">
-                <label class="product-edit__label" for="name">Название</label>
-                <input id="name" class="product-edit__input" type="text" name="name" value="{{.Product.Name}}" required>
-            </div>
-            <div class="product-edit__form-group">
-                <label class="product-edit__label" for="price">Цена</label>
-                <input id="price" class="product-edit__input" type="number" name="price" value="{{.Product.Price}}" required>
-            </div>
-            <div class="product-edit__form-group">
-                <label class="product-edit__label" for="description">Описание</label>
-                <textarea id="description" class="product-edit__input" name="description" required>{{.Product.Description}}</textarea>
-            </div>
-            <div class="product-edit__form-group">
-                <label class="product-edit__label" for="image">Изображение</label>
-                <input id="image" class="product-edit__input" type="file" name="image">
-                <picture class="product-edit__picture">
-                    {{if .Product.ImageURL.Valid}}
-                        <source srcset="{{.Product.ImageURL.String}}" media="(max-width: 1240px)" type="image/">
-                        <img src="{{.Product.ImageURL.String}}" alt="Изображение товара">
-                    {{end}}
-                </picture>
-            </div>
-            <div class="product-edit__form-actions">
-                <button class="btn product-edit__btn-save" type="submit">
-                    <span class="text">Сохранить</span>
-                </button>
-            </div>
-        </form>
-    </div>
+    {{template "product-form" dict "Action" (printf "/admin/products/%d/edit" .Product.ID) "IsEdit" true "Product" .Product "ButtonText" "Сохранить"}}
 </div>
 {{end}}
