--- a/web/frontend-admin/assets/views/pages/product-create.pug
+++ b/web/frontend-admin/assets/views/pages/product-create.pug
@@ -8,5 +8,6 @@ block head
   +description('')
 
 block body
+  include ../components/products/product-header
   include ../components/products/product-form
-  +product-form('create', error)
+  +product-form()
