--- a/internal/templates/admin-templates/templates/pages/product-edit.html
+++ b/internal/templates/admin-templates/templates/pages/product-edit.html
@@ -1,13 +1,8 @@
 {{template "base" .}}
 
 {{define "content"}}
-<div class="product-edit">
-    <div class="product-edit__header">
-        <h1 class="product-edit__page-title">{{.Title}}</h1>
+    <div class="wrapper">
+        {{template "product-header" .}}
+        {{template "product-form" dict "Action" (printf "/admin/products/%d/edit" .Product.ID) "IsEdit" true "Product" .Product "ButtonText" "Сохранить"}}
     </div>
-    {{if .Error}}
-        <div class="alert alert-danger">{{.Error}}</div>
-    {{end}}
-    {{template "product-form" dict "Action" (printf "/admin/products/%d/edit" .Product.ID) "IsEdit" true "Product" .Product "ButtonText" "Сохранить"}}
-</div>
 {{end}}
