--- a/web/frontend-admin/assets/views/_variables.pug
+++ b/web/frontend-admin/assets/views/_variables.pug
@@ -20,8 +20,8 @@
   const pages = [
     { view: 'auth', name: 'Авторизация', style: 'auth', priority: 1, link: '/' },
     { view: 'products-index', name: 'Товары', style: 'products-index', priority: 2, link: '/products-index' },
-    { view: 'product-edit', name: 'Редактирование', style: 'product-edit', priority: 2, link: '/product-edit' },
-    { view: 'product-create', name: 'Добавление', style: 'product-create', priority: 2, link: '/product-create' },
+    { view: 'product-edit', name: 'Редактирование', style: 'product-form', priority: 2, link: '/product-edit' },
+    { view: 'product-create', name: 'Добавление', style: 'product-form', priority: 2, link: '/product-create' },
     { view: '404', name: 'Ошибка 404', style: 'error404', priority: false, link: '/404.html' },
   ]
 
