--- a/web/frontend-client/assets/views/_variables.pug
+++ b/web/frontend-client/assets/views/_variables.pug
@@ -18,10 +18,7 @@
   }
 
   const pages = [
-    { view: 'auth', name: 'Авторизация', style: 'auth', priority: 1, link: '/' },
-    { view: 'products-index', name: 'Товары', style: 'products-index', priority: 2, link: '/products-index' },
-    { view: 'product-edit', name: 'Редактирование', style: 'product-edit', priority: 2, link: '/product-edit' },
-    { view: '404', name: 'Ошибка 404', style: 'error404', priority: false, link: '/404.html' },
+    { view: 'home', name: 'Главная', style: 'home', priority: 2, link: '/' },
   ]
 
   function getPage(view) {
