--- a/web/frontend-client/assets/views/pages/_site-map.pug
+++ b/web/frontend-client/assets/views/pages/_site-map.pug
@@ -17,7 +17,7 @@ if !PRODUCTION
 else
   <?xml version="1.0" encoding="UTF-8"?>
   urlset(xmlns="http://www.sitemaps.org/schemas/sitemap/0.9", xmlns:image="http://www.google.com/schemas/sitemap-image/1.1", xmlns:news="http://www.google.com/schemas/sitemap-news/0.9")
-    - const date = (new Date()).toISOString().split('T')[0]
+    - const ddataViewate = (new Date()).toISOString().split('T')[0]
     each page in pages
       if page.priority
         url
