Initial frontend setup with layout components and styles

--- a/web/frontend-admin/assets/views/_variables.pug
+++ b/web/frontend-admin/assets/views/_variables.pug
@@ -1,6 +1,6 @@
 -
   const pathStatics = '/statics'
-  const pathImage = `${pathStatics}/images`
+  const pathImage = `${pathStatics}/images/`
 
   const phone = { link: 'tel:+79091443776', mask: '+79091443776' }
   const mail = { link: 'mailto:zyazin.nikita@yandex.ru', mask: 'zyazin.nikita@yandex.ru' }
