--- a/web/frontend-client/assets/styles/_variables.sass
+++ b/web/frontend-client/assets/styles/_variables.sass
@@ -1,6 +1,7 @@
 $black: #000
 $white: #ffffff
 $dark: #181212
+$white-dark: #F5F5F5
 $orange: #EA7557
 $orange_hover: #FD9479
 $orange_active: #E2542F
