--- a/web/frontend-client/assets/styles/pages/_style.sass
+++ b/web/frontend-client/assets/styles/pages/_style.sass
@@ -7,3 +7,6 @@
 
 @import "../components/header"
 @import "../components/footer"
+@import "../components/header-mob"
+@import "../components/menu"
+
