--- a/web/frontend-client/assets/views/components/_layout/header.pug
+++ b/web/frontend-client/assets/views/components/_layout/header.pug
@@ -1,7 +1,20 @@
-header.header
-  .header__cont.cont
-    nav.header__nav
-      a.header__nav-link(href="#" class=view === 'products-index' ? 'active' : '')
-        span Товары
-      a.header__nav-link(href="#") 
-        span Выйти
+-
+  const menuList = [
+    {name: 'Главная', link: '/', view: 'index'},
+    {name: 'Доставка', link: '/delivery.html', view: 'delivery'},
+    {name: 'Оплата', link: '/payment.html', view: 'payment'},
+    {name: 'Гарантия', link: '/guarantee.html', view: 'guarantee'}
+  ]
+
+  const menuMobileList = [
+    {name: 'Главная', link: '/', view: 'index'},
+    {name: 'Доставка', link: '/delivery.html', view: 'delivery'},
+    {name: 'Оплата', link: '/payment.html', view: 'payment'},
+    {name: 'Гарантия', link: '/guarantee.html', view: 'guarantee'},
+    {name: 'Контакты', link: '/contacts.html', view: 'contacts'}
+  ]
+
+header.header(data-element="menu")
+  .header__layer(data-element="header__layer")
+  include header-mob
+  include menu
