--- a/web/frontend-client/assets/styles/components/header-mob.sass
+++ b/web/frontend-client/assets/styles/components/header-mob.sass
@@ -56,7 +56,7 @@
     border-radius: 1px
     width: 22px
     height: 2px
-    background-color: $green
+    background-color: $dark
   &::before
     content: ''
     top: 25px
@@ -82,10 +82,8 @@
 .header__logo
   display: block
   margin: 0 auto
-  width: 250px
   padding: 27px 24px 23px
   @include media(1240)
-    width: 184px
     padding: 13px 16px 13px
 
 //.header__picture
