--- a/web/frontend-client/assets/styles/components/header-mob.sass
+++ b/web/frontend-client/assets/styles/components/header-mob.sass
@@ -4,7 +4,7 @@
   left: 0
   right: 0
   z-index: 1000
-  background: $white-dark
+  background: $white
 
 .header_shadow
   box-shadow: 0 4px 4px 0 rgba($black, 0.05)
